@@ -12,21 +12,43 @@ set -e
 
 NODB=1 . ${srcdir=.}/t.frame
 
-EXP="21 48"
+EXP="22 48"
+
+WORDS="subj:Earn subj:Your subj:College"
 
 # combined wordlists
+
+rm -f $BOGOFILTER_DIR/????list.db
 
 $BOGOFILTER -W -s < ${SYSTEST}/inputs/spam.mbx
 $BOGOFILTER -W -n < ${SYSTEST}/inputs/good.mbx
 
-COM=`$BOGOUTIL   -W -w $BOGOFILTER_DIR .MSG_COUNT | tail -1 | $AWK '{printf "%s %s", $2, $3}'`
+OUT="$TMPDIR/combined.out"
+for f in $BOGOFILTER_DIR/????list.db ; do
+    basename $f >> $OUT
+done
+$BOGOUTIL -w $BOGOFILTER_DIR .MSG_COUNT $WORDS >> $OUT
+echo Subject: Earn Your College Degree Online | $BOGOFILTER -uT -D -W >> $OUT
+$BOGOUTIL -w $BOGOFILTER_DIR .MSG_COUNT $WORDS >> $OUT
+
+COM=`$BOGOUTIL -W -w $BOGOFILTER_DIR .MSG_COUNT | tail -1 | $AWK '{printf "%s %s", $2, $3}'`
 
 # separate wordlists
+
+rm -f $BOGOFILTER_DIR/????list.db
 
 $BOGOFILTER -WW -s < ${SYSTEST}/inputs/spam.mbx
 $BOGOFILTER -WW -n < ${SYSTEST}/inputs/good.mbx
 
-SEP=`$BOGOUTIL   -W -w $BOGOFILTER_DIR .MSG_COUNT | tail -1 | $AWK '{printf "%s %s", $2, $3}'`
+OUT="$TMPDIR/separate.out"
+for f in $BOGOFILTER_DIR/????list.db ; do
+    basename $f >> $OUT
+done
+$BOGOUTIL -w $BOGOFILTER_DIR .MSG_COUNT $WORDS >> $OUT
+echo Subject: Earn Your College Degree Online | $BOGOFILTER -uT -D -WW >> $OUT
+$BOGOUTIL -w $BOGOFILTER_DIR .MSG_COUNT $WORDS >> $OUT
+
+SEP=`$BOGOUTIL -WW -w $BOGOFILTER_DIR .MSG_COUNT | tail -1 | $AWK '{printf "%s %s", $2, $3}'`
 
 if [ "$COM" != "$EXP" ] ; then
     echo com: $COM, exp: $EXP
@@ -43,3 +65,15 @@ fi
 if [ "$SEP$COM" != "$EXP$EXP" ] ; then
     exit 1
 fi
+
+OUTPUTS=${SYSTEST}/outputs
+
+for i in $TMPDIR/[cs]*.out ; do
+    j=`basename $i`
+    if  [ $verbose -eq 0 ]; then
+	cmp $i $OUTPUTS/$j
+    else
+	set +e
+	diff $DIFF_BRIEF $i $OUTPUTS/$j
+    fi
+done
